--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "father-build",
-    "start":"webpack-dev-server --config ./config/webpack.dev.config.js --mode development"
+    "start": "webpack-dev-server --config ./config/webpack.dev.config.js --mode development"
   },
   "repository": {
     "type": "git",
@@ -33,6 +33,8 @@
     "@babel/runtime": "^7.7.2",
     "@typed/react": "^1.0.1",
     "@types/react-dom": "^16.9.4",
+    "@types/slate": "^0.47.3",
+    "@types/slate-react": "^0.22.6",
     "@typescript-eslint/parser": "^2.7.0",
     "babel-loader": "^8.0.6",
     "cross-env": "^6.0.3",
@@ -45,7 +47,6 @@
     "immutable": "^4.0.0-rc.12",
     "less": "^3.10.3",
     "prettier": "^1.19.1",
-    "react": "^16.11.0",
     "react-dom": "^16.11.0",
     "slate": "^0.47.9",
     "slate-react": "^0.22.10",
@@ -54,5 +55,9 @@
     "webpack-cli": "^3.3.10",
     "webpack-dev-server": "^3.9.0",
     "webpack-merge": "^4.2.2"
+  },
+  "peerDependencies": {
+    "react": "^16.11.0",
+    "react-dom": "^16.11.0"
   }
 }
