--- a/.editorconfig
+++ b/.editorconfig
@@ -1,16 +1,17 @@
-# http://editorconfig.org
+# editorconfig.org
 root = true
 
 [*]
-indent_style = space
-indent_size = 2
-end_of_line = lf
 charset = utf-8
-trim_trailing_whitespace = true
+end_of_line = lf
+indent_size = 2
+indent_style = space
 insert_final_newline = true
+trim_trailing_whitespace = true
 
 [*.md]
 trim_trailing_whitespace = false
 
-[Makefile]
-indent_style = tab
+[*.txt]
+insert_final_newline = false
+trim_trailing_whitespace = false
