--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,8 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
-# dependencies
-/node_modules
-/npm-debug.log*
-/yarn-error.log
-/yarn.lock
-/package-lock.json
-
-# production
-/dist
-
-# misc
-.DS_Store
+*.log
+.vscode/
+build/
+dist/
+lib/
+node_modules/
+package-lock.json
 
