--- a/.prettierrc
+++ b/.prettierrc
@@ -1,11 +1,5 @@
 {
   "singleQuote": true,
-  "trailingComma": "all",
-  "printWidth": 100,
-  "overrides": [
-    {
-      "files": ".prettierrc",
-      "options": { "parser": "json" }
-    }
-  ]
+  "semi": true,
+  "trailingComma": "es5"
 }
