--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-  "eslint.validate": ["javascript", "javascriptreact", "typescript", "typescriptreact"]
+  "typescript.tsdk": "node_modules\\typescript\\lib"
 }
