--- a/package.json
+++ b/package.json
@@ -1,63 +1,66 @@
 {
-  "name": "slate-editor",
-  "version": "1.0.0",
+  "name": "@beditor/example",
+  "version": "0.1.0",
   "description": "",
-  "main": "index.js",
   "scripts": {
-    "build": "father-build",
-    "start": "webpack-dev-server --config ./config/webpack.dev.config.js --mode development"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/zjdschnappi/slate-editor.git"
+    "start": "cross-env NODE_ENV=development webpack-dev-server --config ./config/webpack.dev.conf.js",
+    "build": "cross-env NODE_ENV=production webpack --config ./config/webpack.prod.conf.js",
+    "debug": "cross-env RM_TMPDIR=none COMPRESS=none UMI_ENV=prod umi build && node server.js"
   },
   "keywords": [
-    "slate",
-    "react",
     "editor"
   ],
   "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/zjdschnappi/slate-editor/issues"
+  "license": "MIT",
+  "engines": {
+    "node": ">8.0.0"
   },
-  "homepage": "https://github.com/zjdschnappi/slate-editor#readme",
-  "devDependencies": {
-    "@babel/cli": "^7.7.0",
-    "@babel/core": "^7.7.2",
-    "@babel/plugin-proposal-class-properties": "^7.7.0",
-    "@babel/plugin-transform-runtime": "^7.6.2",
-    "@babel/preset-env": "^7.7.1",
-    "@babel/preset-react": "^7.7.0",
-    "@babel/preset-typescript": "^7.7.2",
-    "@babel/runtime": "^7.7.2",
-    "@typed/react": "^1.0.1",
-    "@types/react-dom": "^16.9.4",
-    "@types/slate": "^0.47.3",
-    "@types/slate-react": "^0.22.6",
-    "@typescript-eslint/parser": "^2.7.0",
-    "babel-loader": "^8.0.6",
+  "dependencies": {
+    "@loadable/component": "^5.11.0",
     "cross-env": "^6.0.3",
-    "eslint": "^6.6.0",
-    "eslint-config-domi": "^0.2.0",
-    "eslint-plugin-react": "^7.16.0",
-    "eslint-plugin-react-hooks": "^2.2.0",
-    "father-build": "^1.14.1",
+    "is-url": "^1.2.4",
+    "quill-icons": "^1.5.0",
+    "rc-color-picker": "^1.2.6",
+    "rc-dropdown": "^2.4.1",
+    "react": "^16.12.0",
+    "react-document-title": "^2.0.3",
+    "react-dom": "^16.12.0",
+    "react-router-dom": "^5.1.2",
+    "slate": "^0.57.0",
+    "slate-react": "^0.57.0",
+    "uuid": "^3.3.3"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.7.5",
+    "@babel/plugin-proposal-class-properties": "^7.7.4",
+    "@babel/plugin-proposal-object-rest-spread": "^7.7.4",
+    "@babel/plugin-proposal-optional-chaining": "^7.7.5",
+    "@babel/plugin-transform-runtime": "^7.7.6",
+    "@babel/preset-env": "^7.7.6",
+    "@babel/preset-react": "^7.7.4",
+    "@babel/preset-typescript": "^7.7.4",
+    "@types/classnames": "^2.2.9",
+    "@types/is-url": "^1.2.28",
+    "@types/react": "^16.9.16",
+    "@types/react-dom": "^16.9.4",
+    "@types/slate": "^0.47.5",
+    "@types/slate-react": "^0.22.9",
+    "babel-loader": "^8.0.6",
+    "classnames": "^2.2.6",
+    "css-loader": "^3.3.2",
+    "eslint": "^6.7.2",
+    "eslint-loader": "^3.0.3",
     "html-webpack-plugin": "^3.2.0",
-    "immutable": "^4.0.0-rc.12",
+    "ignore-styles": "^5.0.1",
     "less": "^3.10.3",
-    "prettier": "^1.19.1",
-    "react-dom": "^16.11.0",
-    "slate": "^0.47.9",
-    "slate-react": "^0.22.10",
-    "typescript": "^3.7.2",
+    "less-loader": "^5.0.0",
+    "mini-css-extract-plugin": "^0.8.0",
+    "style-loader": "^1.0.1",
+    "typescript": "^3.7.3",
+    "url-loader": "^3.0.0",
     "webpack": "^4.41.2",
     "webpack-cli": "^3.3.10",
     "webpack-dev-server": "^3.9.0",
     "webpack-merge": "^4.2.2"
-  },
-  "peerDependencies": {
-    "react": "^16.11.0",
-    "react-dom": "^16.11.0"
   }
 }
